# foi-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/: deployment-runbook.md  design.md  workflow.md
k8s/: api-deployment.yml  api-service.yml  cluster-issuer.yml  db-deployment.yml  db-pvc.yml  db-service.yml  ingress.yml
k8s/jobs/: ingestion-job.yml
scripts/: download_pdfs.py  ingest_all.py
src/api/: main.py  models.py
src/api/routes/: documents.py  ingest.py  query.py
src/db/: schema.sql
src/ingestion/: chunker.py  embedder.py  extractor.py  metadata.py  pipeline.py
src/retrieval/: generator.py  reranker.py  search.py
tests/: test_api_models.py  test_chunker.py  test_download.py  test_metadata.py  test_routes_documents.py  test_schema_init.py
